# api-monitoring-setup-rs

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  prometheus.yaml
src/: device.rs  main.rs  routes.rs
