[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
axum = "0.8.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.14.1"
serde_json = "1.0.138"
bytes = "1.10.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
